--- a/51-qcom.conf
+++ b/51-qcom.conf
@@ -1,4 +1,3 @@
-{
   "monitor.alsa.rules": [
     {
       "matches": [{"node.name": "~alsa_output*"}],
@@ -6,14 +5,12 @@
         "update-props": {
           "audio.format": "S16LE",
           "audio.rate": 48000,
-          "api.alsa.period-size": 4096,
+          "api.alsa.period-size": 1024,
           "api.alsa.period-num": 6,
           "api.alsa.headroom": 512,
+          "audio.quantum": 1024,
+          "clock.quantum-limit": 4096,
           "session.suspend-timeout-seconds": 0,
-          "filter.graph": [
-            "highpass=f=2000",
-            "lowpass=f=18000"
-          ],
           "audio.channels": 2,
           "api.alsa.soft-mixer": true,
           "api.alsa.multichannel": true
@@ -26,7 +23,7 @@
         "update-props": {
           "audio.format": "S16LE",
           "audio.rate": 48000,
-          "api.alsa.period-size": 4096,
+          "api.alsa.period-size": 1024,
           "api.alsa.period-num": 6,
           "api.alsa.headroom": 512
         }
